Apply modernizer to test sources too